# context-engineering-intro

./: .gitignore
.claude/: settings.local.json
docugen/: .env  CLAUDE.md  INITIAL.md  README.md  pyproject.toml
docugen/PRPs/: docugen-multi-agent-system.md
docugen/app/: __init__.py  config.py  main.py
docugen/app/agents/: __init__.py  graph.py  nodes.py  state.py
docugen/app/agents/base/: __init__.py  agent.py  subgraph.py
docugen/app/agents/coordinator/: __init__.py  routing.py
docugen/app/agents/generator/: __init__.py  agent.py  prompts.py  tools.py
docugen/app/agents/rag/: __init__.py  agent.py  prompts.py  tools.py
docugen/app/agents/reviewer/: __init__.py  agent.py  prompts.py  tools.py
docugen/app/api/: __init__.py
docugen/app/api/routes/: __init__.py  documents.py  knowledge.py  tasks.py  templates.py
docugen/app/ingestion/: __init__.py  chunker.py  embedder.py  ingest.py
docugen/app/models/: __init__.py
docugen/app/services/: __init__.py  task_service.py
docugen/app/utils/: __init__.py  db.py  llm.py
docugen/app/webui/: __init__.py  app.py
docugen/tests/: conftest.py
docugen/tests/test_agents/: __init__.py  test_generator.py  test_rag.py  test_reviewer.py  test_workflow.py
docugen/tests/test_api/: __init__.py  test_routes.py
docugen/tests/test_services/: __init__.py  test_services.py
